# PyTurtle

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pyturtle/: __init__.py
src/pyturtle/shapes/: arc.py  circle.py  circle_class.py  line.py  point.py  polygon_class.py  random_walk_class.py  shape.py  triangle.py
tests/: test_arc.py  test_circle.py  test_line.py  test_pyturtle.py
